# ocs-ai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.docker/config/otel-collector/: otel-collector-config.yaml
chat-ui/: index.html  indexing.html
src/: globals.py  main.py
src/config/: app_config.py  chroma_config.py  gemini_config.py  google_search_config.py  rag_config.py
src/database/: chroma_db_connector.py
src/modules/chat/: chat_constant.py  chat_controller.py  chat_enum.py  document_searcher.py  llm_tools.py  rag_graph.py  search_result.py  state_types.py
src/modules/indexing/: indexing_controller.py  pdf_processor.py
