[tool.poetry]
name = "OcsAI"
version = "0.1.0"
description = "RAG application built with FastAPI and LangChain components"
authors = ["Tony Pham"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "0.115.12"
uvicorn = "0.34.0"
python-multipart = "0.0.20"

langchain = "1.1.0"
langchain-openai = "1.1.0"
langchain-anthropic = "1.2.0"
langchain-community = "0.4.1"
langchain-google-genai = "3.2.0"
langchain-text-splitters = "1.0.0"

chromadb = "1.3.5"
pydantic-settings = "2.12.0"
pypdf = "6.4.0"
google-api-python-client = "2.187.0"
pathlib = "1.0.1"

fastapi-cli = "0.0.16"
fastapi-cloud-cli = "0.3.1"
setuptools-rust = "1.12.0"
numpy = "2.3.5"
python-dotenv = "1.2.1"

[tool.poetry.group.dev.dependencies]
poethepoet = ">=0.38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "uvicorn src.main:app --host 0.0.0.0 --port 80 --reload --timeout-keep-alive 30000"